--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,41 @@
-.recent-badges-big li {
+.my-badges-big li {
     list-style-type: none;
     text-align: center !important;
     padding-bottom: 16px !important;
 }
-.recent-badges-small li {
+.my-badges-small li {
     list-style-type: none;
     text-align: left !important;
     padding-bottom: 16px !important;
 }
-.recent-badges-small li .badge-image {
+.my-badges-bigoverlapping li {
+    list-style-type: none;
+    text-align: center !important;
+    padding-bottom: 16px !important;
+}
+.my-badges-smalloverlapping li {
+    list-style-type: none;
+    text-align: left !important;
+    padding-bottom: 16px !important;
+}
+.my-badges-smalloverlapping .badge-title, .my-badges-bigoverlapping .badge-title {
+    display: none;
+}
+.my-badges-small li .badge-image {
     width: 25px;
     height: 25px;
     left: 0px;
     top: 0px;
     z-index: 1;
 }
-.recent-badges-big li .badge-image {
+.my-badges-big li .badge-image {
     width: 100px;
     height: 100px;
     left: 0px;
     top: 0px;
     z-index: 1;
 }
-.recent-badges-small li img.expireimage {
+.my-badges-small li img.expireimage {
     width: 25px;
     height: 25px;
     left: 0px;
@@ -30,7 +43,7 @@
     z-index: 2;
     margin-left: -25px;
 }
-.recent-badges-big li img.expireimage {
+.my-badges-big li img.expireimage {
     width: 100px;
     height: 100px;
     left: 0px;
@@ -38,29 +51,55 @@
     z-index: 2;
     margin-left: -100px;
 }
-.recent-badges-big span.badge-name,
-.recent-badges-small span.badge-name {
+.my-badges-big span.badge-name,
+.my-badges-small span.badge-name {
     white-space: nowrap;
 }
-ul.recent-badges-big,
-ul.recent-badges-small {
+ul.my-badges-big,
+ul.my-badges-small {
     padding-top: 8px;
 }
 
-#page-admin-blocks-mybadges-about .about-box {
+#page-admin-blocks-bs_recent_badges-about .about-box {
     margin-top: 50px;
 }
 
-#page-admin-blocks-mybadges-about .about-text,
-#page-admin-blocks-mybadges-about .donation-text {
+#page-admin-blocks-bs_recent_badges-about .about-text,
+#page-admin-blocks-bs_recent_badges-about .donation-text {
     margin-bottom: 12px;
 }
 
-#page-admin-blocks-mybadges-about .donation-button {
+#page-admin-blocks-bs_recent_badges-about .donation-button {
     margin-bottom: 8px;
 }
 
-.recent-badges-latestcoursebadges,
-.recent-badges-latestsystembadges {
+.my-badges-description,
+.my-badges-latestsystembadges {
     margin-bottom: 4px;
+}
+
+ul.my-badges-smalloverlapping>* {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    width: 40%;
+}
+
+ul.my-badges-bigoverlapping>* {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    width: 80%;
+}
+
+ul.my-badges-smalloverlapping, ul.my-badges-bigoverlapping {
+    display: grid;
+    padding: 0;
+    justify-items: center;
+}
+
+.my-badges-smalloverlapping li .badge-image, .my-badges-bigoverlapping li .badge-image {
+    width: 100%;
+    height: unset;
+}
+.my-badges-description {
+    text-align: center;
 }
